    bytecode objects to about 32000 bytes and about 32000 constants,
    but reduces the use of memory by about 25%.

  - Macros are implemented in C as functions with two arguments.
    Argument checking is thus left to funcall() and apply(), saving
    space.

  - AND, OR and WHEN are now just macros, without any special
    treatment in the bytecodes compiler.

* Visible changes:

  - New special form C-INLINE, allows inserting C/C++ code in any
    place where a lisp form is allowed.

  - New lisp object type, t_foreign, for user-allocated or "foreign"
    data; plus routines to simulate the UFFI foreign functions
    interface.

  - New function SI::FILE-KIND (based on lstat() and stat()) returns
    either :DIRECTORY, :FILE, :LINK, :SPECIAL, or NIL (= Non
    existent), for a given file name.

  - Bytecode-compiled functions now print as
    #<bytecompiled-function... just to remark that, according to ANSI,
    these functions are not interpreted (i.e. there are no run-time
    dependencies on macros left).

  - Formerly, the process of inlining a call to a function would be
    done only once the C code is written. For instance, if the
    compiler found
        (FUNCALL (LAMBDA (X) (COS X)) 1.0)
    it would only decide to do the inlining during the second phase of
    the compilation process. That meant extremely complicated and easy
    to break code in the compiler. The new engine does the inlining of
    these forms during the first phase, in which Lisp is translated to
    an intermediate representation.  For instance, the previous form
    is translated to
        (LET ((X 1.0)) (COS X))
    and here optimizations are much easier.

  - The optimizers for the MAPCAR, MAPCAN, etc, were broken. They will
    be replaced with compiler macro functions, which are easier to
    maintain.

  - CLEAR-INPUT now works with interactive streams (*STANDARD-INPUT, etc).

  - On systems which support it, LISTEN-STREAM is now implemented