@@ -889,6 +889,28 @@ COMMON is the type of all Common Lisp data objects.")
 (docfun commonp function (x) "
 Returns T if X is a Common Lisp object; NIL otherwise.")
 
+(docfun compile function (name &optional definition) "
+If DEFINITION is NIL, NAME must be the name of a not-yet-compiled function.
+In this case, COMPILE compiles the function, installs the compiled function as
+the global function definition of NAME, and returns NAME.  If DEFINITION is
+non-NIL, it must be a lambda expression and NAME must be a symbol.  COMPILE
+compiles the lambda expression, installs the compiled function as the function
+definition of NAME, and returns NAME.  There is only one exception for this:
+If NAME is NIL, then the compiled function is not installed but is simply
+returned as the value of COMPILE.  In any case, COMPILE creates temporary
+files, whose filenames begin with \"gazonk\", which are automatically deleted
+after compilation.")
+
+(docfun compile-file function (input-pathname &key output-file (load nil)
+		     (o-file t) (c-file nil) (h-file nil) (data-file nil)) "
+Compiles the file specified by INPUT-PATHNAME and generates a fasl file
+specified by OUTPUT-FILE.  If the filetype is not specified in INPUT-PATHNAME,
+then \".lsp\" is used as the default file type for the source file.  LOAD
+specifies whether to load the generated fasl file after compilation.  The
+:O-FILE, :C-FILE, :H-FILE, and :DATA-FILE keyword parameters allow you to
+control the intermediate files generated by the ECL compiler.If the file was
+compiled successfully, returns the pathname of the compiled file")
+
 (doctype compiled-function "
 A compiled function is an object that is created by compiling a function.  A
 compiled function is notated in either of the following formats:
@@ -1127,6 +1149,16 @@ FILESPEC may be a symbol, a string, a pathname, or a file stream.")
 (docfun si::displaced-array-p function (array) "
 ECL specific.
 Returns T if the ARRAY is displaced to another array; NIL otherwise.")
+
+(docfun disassemble function (&optional (thing nil) &key (h-file nil) (data-file nil)) "
+Compiles the form specified by THING and prints the intermediate C language
+code for that form.  But does not install the result of compilation.  If THING
+is NIL, then the previously DISASSEMBLEd form is re-DISASSEMBLEd.  If THING is
+a symbol that names a function not yet compiled, the function definition is
+disassembled.  If THING is a lambda expression, it is disassembled as a
+function definition.  Otherwise, THING itself is disassembled as a top-level
+form.  H-FILE and DATA-FILE specify intermediate files to build a fasl file
+from the C language code.  NIL means \"do not create the file\".")
 
 #+profile
 (docfun si::display-profile function () "
